--- a/notebooks/s3e17_machine_failures.ipynb
+++ b/notebooks/s3e17_machine_failures.ipynb
@@ -1793,7 +1793,7 @@
     "# Instantiate a LogisticRegression model\n",
     "model_lr = LogisticRegression(max_iter=1000)\n",
     "\n",
-    "# Fit logreg to the train set\n",
+    "# Fit model to the train set\n",
     "model_lr.fit(X_train, y_train)\n",
     "\n",
     "# predict y_pred values\n",
@@ -1829,9 +1829,12 @@
    ],
    "source": [
     "# Instantiate a RandomForestClassifier model\n",
-    "model_rfc = RandomForestClassifier(n_estimators=50, max_depth=3, class_weight='balanced', random_state=seed)\n",
+    "model_rfc = RandomForestClassifier(n_estimators=50, \n",
+    "                                   max_depth=3, \n",
+    "                                   class_weight='balanced', \n",
+    "                                   random_state=seed)\n",
     "\n",
-    "# Fit logreg to the train set\n",
+    "# Fit model to the train set\n",
     "model_rfc.fit(X_train, y_train)\n",
     "\n",
     "# predict y_pred values\n",
@@ -1853,11 +1856,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b0684ac3-50f0-4199-abcf-30ab3a02729b",
+   "execution_count": 111,
+   "id": "c2c72200-a8be-4b1c-810c-4675175eb733",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# define XGBoost hyperparams dict\n",
+    "hyperparams_xgbc = {\n",
+    "    'max_depth' : 5,\n",
+    "    'learning_rate' : 0.01,\n",
+    "    'n_estimators' : 500,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "b0684ac3-50f0-4199-abcf-30ab3a02729b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC_ROC: 0.9616994929895107\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instantiate a XGBClassifier model\n",
+    "model_xgbc = XGBClassifier(**hyperparams_xgbc)\n",
+    "\n",
+    "# Fit model to the train set\n",
+    "model_xgbc.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict y_pred\n",
+    "y_pred_xgbc = model_xgbc.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "# Compute AUC_ROC metric\n",
+    "auc_roc_xgbc = roc_auc_score(y_test, y_pred_xgbc)\n",
+    "\n",
+    "print('AUC_ROC: {}'.format(auc_roc_xgbc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca272eb1-3bd9-4455-be19-a60078624d27",
+   "metadata": {},
+   "source": [
+    "<a name=\"8\"></a>\n",
+    "# Challenge Submission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "c5b3f3c9-0b92-429d-99e5-87698d72fc7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate predictions with test set with the besst performing model (based on ROC_AUC)\n",
+    "submission_predictions = model_xgbc.predict_proba(transformed_test_data)[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "3b9077c0-094c-4ffd-94af-59778290a1ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create submission DataFrame\n",
+    "submission = pd.DataFrame({'id': test_data.index, 'Machine failure': submission_predictions})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "98a028de-9aad-413e-8832-38ecbf491c05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Machine failure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>136429</td>\n",
+       "      <td>0.004583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>136430</td>\n",
+       "      <td>0.004583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>136431</td>\n",
+       "      <td>0.004583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>136432</td>\n",
+       "      <td>0.005260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>136433</td>\n",
+       "      <td>0.004583</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id  Machine failure\n",
+       "0  136429         0.004583\n",
+       "1  136430         0.004583\n",
+       "2  136431         0.004583\n",
+       "3  136432         0.005260\n",
+       "4  136433         0.004583"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submission.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "d6bc94cb-c2a5-44d1-bf3b-bb9548bffe00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write CSV File\n",
+    "submission.to_csv('./submission.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
