--- a/notebooks/s3e17_machine_failures.ipynb
+++ b/notebooks/s3e17_machine_failures.ipynb
@@ -2235,8 +2235,11 @@
     "# Define Neural Network Architecture\n",
     "model_tf = Sequential(\n",
     "    [               \n",
-    "        Dense(25, input_shape=(13,), activation='relu', name='L1'),\n",
+    "        Dense(30, input_shape=(13,), activation='relu', name='L1'),\n",
+    "        Dense(25, activation='relu', name='L2'),\n",
+    "        Dense(20, activation='relu', name='L2'),\n",
     "        Dense(12, activation='relu', name='L2'),\n",
+    "        Dense(6, activation='relu', name='L2'),\n",
     "        Dense(1, activation='linear', name='L3'),\n",
     "    ]\n",
     ")"
