--- a/notebooks/s3e17_machine_failures.ipynb
+++ b/notebooks/s3e17_machine_failures.ipynb
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "id": "98016863-dc7e-49a6-8856-50049dc40676",
    "metadata": {},
    "outputs": [
@@ -2294,7 +2294,21 @@
       "Epoch 3/10\n",
       "3066/3066 [==============================] - 11s 3ms/step - loss: 0.0249\n",
       "Epoch 4/10\n",
-      "  97/3066 [..............................] - ETA: 10s - loss: 0.0271"
+      "3066/3066 [==============================] - 10s 3ms/step - loss: 0.0246\n",
+      "Epoch 5/10\n",
+      "3066/3066 [==============================] - 11s 3ms/step - loss: 0.0243\n",
+      "Epoch 6/10\n",
+      "3066/3066 [==============================] - 10s 3ms/step - loss: 0.0241\n",
+      "Epoch 7/10\n",
+      "3066/3066 [==============================] - 10s 3ms/step - loss: 0.0238\n",
+      "Epoch 8/10\n",
+      "3066/3066 [==============================] - 10s 3ms/step - loss: 0.0236\n",
+      "Epoch 9/10\n",
+      "3066/3066 [==============================] - 10s 3ms/step - loss: 0.0233\n",
+      "Epoch 10/10\n",
+      "3066/3066 [==============================] - 10s 3ms/step - loss: 0.0233\n",
+      "CPU times: total: 2min 42s\n",
+      "Wall time: 1min 46s\n"
      ]
     }
    ],
@@ -2315,7 +2329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 201,
    "id": "558acf5a-997d-4e27-87bd-7b809a1b4513",
    "metadata": {},
    "outputs": [
@@ -2323,8 +2337,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1511/1511 [==============================] - 3s 2ms/step\n",
-      "AUC_ROC: 0.9611618475539663\n"
+      "1511/1511 [==============================] - 4s 3ms/step\n",
+      "AUC_ROC: 0.9582019052066661\n"
      ]
     }
    ],
@@ -2338,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 202,
    "id": "7e4819cc-a0cc-44e4-94fa-e4dd9f922d79",
    "metadata": {},
    "outputs": [],
