--- a/notebooks/regression_problems/s3e14_wild_blueberry_yield_prediction.ipynb
+++ b/notebooks/regression_problems/s3e14_wild_blueberry_yield_prediction.ipynb
@@ -43,65 +43,8 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "86f76418",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-05-15T21:31:16.382670Z",
-     "iopub.status.busy": "2023-05-15T21:31:16.381786Z",
-     "iopub.status.idle": "2023-05-15T21:31:36.075435Z",
-     "shell.execute_reply": "2023-05-15T21:31:36.074116Z"
-    },
-    "papermill": {
-     "duration": 19.724692,
-     "end_time": "2023-05-15T21:31:36.078220",
-     "exception": false,
-     "start_time": "2023-05-15T21:31:16.353528",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting numpy<1.23.0,>=1.16.5\n",
-      "  Downloading numpy-1.22.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.8/16.8 MB\u001b[0m \u001b[31m48.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: numpy\n",
-      "  Attempting uninstall: numpy\n",
-      "    Found existing installation: numpy 1.23.5\n",
-      "    Uninstalling numpy-1.23.5:\n",
-      "      Successfully uninstalled numpy-1.23.5\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "tensorflow 2.11.0 requires protobuf<3.20,>=3.9.2, but you have protobuf 3.20.3 which is incompatible.\n",
-      "tensorflow-serving-api 2.11.0 requires protobuf<3.20,>=3.9.2, but you have protobuf 3.20.3 which is incompatible.\n",
-      "pymc3 3.11.5 requires numpy<1.22.2,>=1.15.0, but you have numpy 1.22.4 which is incompatible.\n",
-      "pymc3 3.11.5 requires scipy<1.8.0,>=1.7.3, but you have scipy 1.9.3 which is incompatible.\n",
-      "librosa 0.10.0.post2 requires soundfile>=0.12.1, but you have soundfile 0.11.0 which is incompatible.\n",
-      "beatrix-jupyterlab 2023.46.184821 requires jupyter-server~=1.16, but you have jupyter-server 2.5.0 which is incompatible.\n",
-      "apache-beam 2.46.0 requires dill<0.3.2,>=0.3.1.1, but you have dill 0.3.6 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0mSuccessfully installed numpy-1.22.4\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install \"numpy>=1.16.5,<1.23.0\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "0d7c42ac",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-05-15T21:31:36.136025Z",
-     "iopub.status.busy": "2023-05-15T21:31:36.135630Z",
-     "iopub.status.idle": "2023-05-15T21:31:39.566244Z",
-     "shell.execute_reply": "2023-05-15T21:31:39.565084Z"
-    },
     "papermill": {
      "duration": 3.462854,
      "end_time": "2023-05-15T21:31:39.568879",
@@ -111,16 +54,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.10/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.5\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# importing standard libraries\n",
     "import pandas as pd\n",
@@ -2581,16 +2515,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "047bc865",
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3e585e36-8633-40eb-ad7b-b2f78ce21958",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defininf a flag to not rerun the gridsearch when rerunning the whole notebook\n",
+    "grid_search_flag = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c331d81e-5c8e-453e-ae56-57eefef180ec",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-05-15T14:11:25.316581Z",
-     "iopub.status.busy": "2023-05-15T14:11:25.316146Z",
-     "iopub.status.idle": "2023-05-15T16:51:31.325965Z",
-     "shell.execute_reply": "2023-05-15T16:51:31.324897Z",
-     "shell.execute_reply.started": "2023-05-15T14:11:25.316548Z"
-    },
     "papermill": {
      "duration": 0.051279,
      "end_time": "2023-05-15T21:34:43.987338",
@@ -2600,41 +2539,47 @@
     },
     "tags": []
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
-    "# Define a dictionary containing the parameters to tune\n",
-    "params_model_rf = {\n",
-    "    'n_estimators': [25, 50, 100],\n",
-    "    'criterion': ['absolute_error'],\n",
-    "    'max_depth': [4, 9, 12],\n",
-    "    'min_samples_split': [5, 10, 15],\n",
-    "    'min_samples_leaf': [5, 10, 15]\n",
-    "}\n",
+    "if grid_search_flag:\n",
     "\n",
-    "# Instantiate grid_gb\n",
-    "grid_model_rf = GridSearchCV(estimator=RandomForestRegressor(random_state=seed),\n",
-    "                       param_grid=params_model_rf,\n",
-    "                       scoring='neg_mean_squared_error',\n",
-    "                       cv=3,\n",
-    "                       verbose=3,\n",
-    "                       n_jobs=1)\n",
+    "    # Define a dictionary containing the parameters to tune\n",
+    "    params_model_rf = {\n",
+    "        'n_estimators': [25, 50, 100],\n",
+    "        'criterion': ['absolute_error'],\n",
+    "        'max_depth': [4, 9, 12],\n",
+    "        'min_samples_split': [5, 10, 15],\n",
+    "        'min_samples_leaf': [5, 10, 15]\n",
+    "    }\n",
     "\n",
-    "# Fit grid_model_rf\n",
-    "grid_model_rf.fit(X_train, y_train)"
+    "    # Instantiate grid_gb\n",
+    "    grid_model_rf = GridSearchCV(estimator=RandomForestRegressor(random_state=seed),\n",
+    "                           param_grid=params_model_rf,\n",
+    "                           scoring='neg_mean_squared_error',\n",
+    "                           cv=3,\n",
+    "                           verbose=3,\n",
+    "                           n_jobs=1)\n",
+    "\n",
+    "    # Fit grid_model_rf\n",
+    "    grid_model_rf.fit(X_train, y_train)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e0446b2a",
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6c818928-7668-498b-9cf6-49345b4287cc",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-05-15T16:52:03.721502Z",
-     "iopub.status.busy": "2023-05-15T16:52:03.720267Z",
-     "iopub.status.idle": "2023-05-15T16:52:03.727975Z",
-     "shell.execute_reply": "2023-05-15T16:52:03.726843Z",
-     "shell.execute_reply.started": "2023-05-15T16:52:03.721453Z"
-    },
     "papermill": {
      "duration": 0.051186,
      "end_time": "2023-05-15T21:34:44.090999",
@@ -2644,24 +2589,21 @@
     },
     "tags": []
    },
+   "outputs": [],
    "source": [
-    "# Extract best hyperparams\n",
-    "best_params_rf = grid_model_rf.best_params_\n",
+    "if grid_search_flag:    \n",
+    "    \n",
+    "    # Extract best hyperparams\n",
+    "    best_params_rf = grid_model_rf.best_params_\n",
     "\n",
-    "print('Best hyperparameters for Random Forest Regressor:\\n', best_params_rf)"
+    "    print('Best hyperparameters for Random Forest Regressor:\\n', best_params_rf)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "98aa1c3c",
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6c3bf0ab-310b-4c40-b453-0c4b2d1ef4a7",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-05-15T17:09:26.736658Z",
-     "iopub.status.busy": "2023-05-15T17:09:26.736148Z",
-     "iopub.status.idle": "2023-05-15T17:09:26.832450Z",
-     "shell.execute_reply": "2023-05-15T17:09:26.831207Z",
-     "shell.execute_reply.started": "2023-05-15T17:09:26.736625Z"
-    },
     "papermill": {
      "duration": 0.051469,
      "end_time": "2023-05-15T21:34:44.194214",
@@ -2671,23 +2613,26 @@
     },
     "tags": []
    },
+   "outputs": [],
    "source": [
-    "%%time\n",
+    "if grid_search_flag:      \n",
+    "    \n",
+    "    %%time\n",
     "\n",
-    "# Extract the best model performance\n",
-    "best_model_rf = grid_model_rf.best_estimator_\n",
+    "    # Extract the best model performance\n",
+    "    best_model_rf = grid_model_rf.best_estimator_\n",
     "\n",
-    "# Predict test set labels using the best model\n",
-    "y_pred_best_rf = best_model_rf.predict(X_test)\n",
+    "    # Predict test set labels using the best model\n",
+    "    y_pred_best_rf = best_model_rf.predict(X_test)\n",
     "\n",
-    "# Compute MAE\n",
-    "mae_best_rf = mean_absolute_error(y_test, y_pred_best_rf)\n",
+    "    # Compute MAE\n",
+    "    mae_best_rf = mean_absolute_error(y_test, y_pred_best_rf)\n",
     "\n",
-    "# Compute RMSE\n",
-    "rmse_best_rf = round(mean_squared_error(y_test, y_pred_best_rf) ** 0.5, 2)\n",
+    "    # Compute RMSE\n",
+    "    rmse_best_rf = round(mean_squared_error(y_test, y_pred_best_rf) ** 0.5, 2)\n",
     "\n",
-    "print('MAE best rf: {}'.format(mae_best_rf))\n",
-    "print('RMSE best rf: {}'.format(rmse_best_rf))"
+    "    print('MAE best rf: {}'.format(mae_best_rf))\n",
+    "    print('RMSE best rf: {}'.format(rmse_best_rf))"
    ]
   },
   {
