--- a/notebooks/regression_problems/s3e14_wild_blueberry_yield_prediction.ipynb
+++ b/notebooks/regression_problems/s3e14_wild_blueberry_yield_prediction.ipynb
@@ -2636,16 +2636,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "192d9d11",
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1548915d-80ae-49d2-9604-6cd86bbcf66c",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-05-15T17:04:04.051389Z",
-     "iopub.status.busy": "2023-05-15T17:04:04.051044Z",
-     "iopub.status.idle": "2023-05-15T17:04:04.058106Z",
-     "shell.execute_reply": "2023-05-15T17:04:04.056972Z",
-     "shell.execute_reply.started": "2023-05-15T17:04:04.051361Z"
-    },
     "papermill": {
      "duration": 0.051044,
      "end_time": "2023-05-15T21:34:44.297166",
@@ -2655,28 +2649,13 @@
     },
     "tags": []
    },
+   "outputs": [],
    "source": [
-    "# Update 'performance' DataFrame\n",
-    "performance.loc['Tuned Gradient Boosting Regressor'] = [mae_best_rf,\n",
-    "                                                        rmse_best_rf]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "626181a0",
-   "metadata": {
-    "papermill": {
-     "duration": 0.051268,
-     "end_time": "2023-05-15T21:34:44.400218",
-     "exception": false,
-     "start_time": "2023-05-15T21:34:44.348950",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "Comment: I used the wrong scoring (MSE) and since this little maneuver's gonna cost me 51 years, I'm not rerunning the GridSearch again\n",
-    "<br>✨Lesson learned✨"
+    "if grid_search_flag:   \n",
+    "    \n",
+    "    # Update 'performance' DataFrame\n",
+    "    performance.loc['Tuned Gradient Boosting Regressor'] = [mae_best_rf,\n",
+    "                                                            rmse_best_rf]"
    ]
   },
   {
