--- a/notebooks/binary_classification_problems/s3e17_machine_failures.ipynb
+++ b/notebooks/binary_classification_problems/s3e17_machine_failures.ipynb
@@ -1434,6 +1434,7 @@
    "id": "31ac3917-e63c-467a-b731-b62b0109c3e4",
    "metadata": {},
    "source": [
+    "<a name=\"3\"></a>\n",
     "# Data Preprocessing"
    ]
   },
