--- a/notebooks/multi-label_classificaton_problems/enzyme_substrate_multi-label_classification.ipynb
+++ b/notebooks/multi-label_classificaton_problems/enzyme_substrate_multi-label_classification.ipynb
@@ -1150,7 +1150,19 @@
     "\n",
     "### Whats nexts\n",
     "- Compute feature engineering to enhance the correlation between different features (e.g 'MinEStateIndex' x 'EState_VSA1')\n",
-    "- Adding a feature to mark with: 0 - rows with 0 in EC1 **and** EC2; 1 - rows with 1 in eithr EC1 **or** EC2, "
+    "- Adding a feature to mark with: 0 - rows with 0 in EC1 **and** EC2; 1 - rows with 1 in eithr EC1 **or** EC2, 2 - rows with 1 in EC1 **and** EC2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f56297b4-22bb-4d71-909c-3df81b18f31a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Data Preprocessing"
    ]
   }
  ],
