--- a/notebooks/multi-label_classificaton_problems/enzyme_substrate_multi-label_classification.ipynb
+++ b/notebooks/multi-label_classificaton_problems/enzyme_substrate_multi-label_classification.ipynb
@@ -1149,20 +1149,118 @@
     "- Some features show an extrimely similar behaviour (e.g FpDensityMorgan1, FpDensityMorgan2, FpDensityMorgan3)\n",
     "\n",
     "### Whats nexts\n",
-    "- Compute feature engineering to enhance the correlation between different features (e.g 'MinEStateIndex' x 'EState_VSA1')\n",
-    "- Adding a feature to mark with: 0 - rows with 0 in EC1 **and** EC2; 1 - rows with 1 in eithr EC1 **or** EC2, 2 - rows with 1 in EC1 **and** EC2"
+    "- Scaling and normalizing data before modeling end building a neural network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeed9818-c48e-4c4c-96b8-f139f0752c82",
+   "metadata": {},
+   "source": [
+    "<a name=\"3\"></a>\n",
+    "# Data Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f56297b4-22bb-4d71-909c-3df81b18f31a",
+   "execution_count": 40,
+   "id": "818a768f-f7ca-43b8-a4e9-c3125a450af1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['BertzCT', 'Chi1', 'Chi1n', 'Chi1v', 'Chi2n', 'Chi2v', 'Chi3v', 'Chi4n',\n",
+       "       'EState_VSA1', 'EState_VSA2', 'ExactMolWt', 'FpDensityMorgan1',\n",
+       "       'FpDensityMorgan2', 'FpDensityMorgan3', 'HallKierAlpha',\n",
+       "       'HeavyAtomMolWt', 'Kappa3', 'MaxAbsEStateIndex', 'MinEStateIndex',\n",
+       "       'NumHeteroatoms', 'PEOE_VSA10', 'PEOE_VSA14', 'PEOE_VSA6', 'PEOE_VSA7',\n",
+       "       'PEOE_VSA8', 'SMR_VSA10', 'SMR_VSA5', 'SlogP_VSA3', 'VSA_EState9',\n",
+       "       'fr_COO', 'fr_COO2', 'EC1', 'EC2', 'EC3', 'EC4', 'EC5', 'EC6',\n",
+       "       'EC1_2_flag'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62b40a2b-8801-4d3a-96f8-0b3e79bcabe4",
+   "metadata": {},
+   "source": [
+    "## Defining features and Labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "afc8bfbd-f535-41d7-82f9-94ceb7464c27",
    "metadata": {},
    "outputs": [],
    "source": [
+    "numerical_features = ['BertzCT', 'Chi1', 'Chi1n', 'Chi1v', 'Chi2n', 'Chi2v', 'Chi3v', 'Chi4n',\n",
+    "       'EState_VSA1', 'EState_VSA2', 'ExactMolWt', 'FpDensityMorgan1',\n",
+    "       'FpDensityMorgan2', 'FpDensityMorgan3', 'HallKierAlpha',\n",
+    "       'HeavyAtomMolWt', 'Kappa3', 'MaxAbsEStateIndex', 'MinEStateIndex',\n",
+    "       'NumHeteroatoms', 'PEOE_VSA10', 'PEOE_VSA14', 'PEOE_VSA6', 'PEOE_VSA7',\n",
+    "       'PEOE_VSA8', 'SMR_VSA10', 'SMR_VSA5', 'SlogP_VSA3', 'VSA_EState9',\n",
+    "       'fr_COO', 'fr_COO2']\n",
     "\n",
+    "labels = ['EC1', 'EC2']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d28a22d5-8c72-4c18-b292-4ac56c352d83",
+   "metadata": {},
+   "source": [
+    "## Scaling Numerical Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9f83f3c1-7bd5-413a-be0b-84bd3abb13d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize Scaler\n",
+    "scaler = MinMaxScaler()\n",
     "\n",
-    "# Data Preprocessing"
+    "# Fit and transform the train data using the pipeline\n",
+    "transformed_train_data = pd.DataFrame(scaler.fit_transform(train_data[numerical_features]))\n",
+    "\n",
+    "# Scaling removed column names - put them back\n",
+    "transformed_train_data.columns = numerical_features\n",
+    "\n",
+    "# Reset index\n",
+    "transformed_train_data.index = train_data.index\n",
+    "\n",
+    "# Transform test data\n",
+    "transformed_test_data = pd.DataFrame(scaler.transform(test_data[numerical_features]))\n",
+    "\n",
+    "# Scaling removed column names - put them back\n",
+    "transformed_test_data.columns = numerical_features\n",
+    "\n",
+    "# Reset index\n",
+    "transformed_test_data.index = test_data.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "320b9b80-c296-4bc0-b67f-7c6966c8c89a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalizing Numerical Features\n"
    ]
   }
  ],
